k8s/03-udp-postgrestapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-postgrestapi
  namespace: udp-namespace
  labels:
    app: udp-postgrestapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp-postgrestapi
  template:
    metadata:
      labels:
        app: udp-postgrestapi
    spec:
      containers:
      - name: udp-postgrestapi
        image: postgrest/postgrest:v12.0.2
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: udp-postgrestapi
  namespace: udp-namespace
spec:
  selector:
    app: udp-postgrestapi
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
